# socket-over-rdma

./: .gitignore  .gitmodules  Makefile  README.md  __scap.c  common.h  main.c  notes.md  scap.bpf.c  scap.c  scap.h
RDMA/: Makefile  README.md  rdma_client.c  rdma_server.c  test_rdma.c
RDMA/librdma/: librdma.c  librdma.h  rdmalib.md
RDMA_test/: README.md  rdma_client.c  rdma_server.c
RDMA_test/librdma/: librdma.c  librdma.h
docker/: connect_docker.sh  docker-compose.yaml
docker/base_img/: base_img.Dockerfile  setup.docker.sh
ebpf/: main.c
performance/: iperf_plotter.py  performance.md  results.md
performance/latency/: latency_printer.py
performance/mem_bandwidth/: iperf3_results.csv  mem_bandw.py
performance/redis/: redis.conf  redis_benchmark.csv  redis_benchmark_RDMA.csv  run_redis.py
performance/redis/RDMA/: redis_benchmark_RDMA.csv  redis_benchmark_RDMA_10.csv  redis_benchmark_RDMA_30.csv  redis_benchmark_RDMA_40.csv
performance/redis/TCP/: redis_benchmark_TCP.csv  redis_benchmark_TCP_10.csv  redis_benchmark_TCP_30.csv  redis_benchmark_TCP_40.csv
performance/redis/graphs/: print_graph.py
performance/redis/graphs/merged/: print2.py
performance/resources/: plot_cpu_general.py  res_monitor_general.sh
performance/resources/flamegraph/: script_perf_rdma_test.sh
performance/resources/iperf3_app/: data_cleaner.py  res_monitor_per_thread.sh
performance/results/sk_msg_mem/: ram_log.csv
performance/results/tcp_local/: tcp_local_2_stream_iperf3.json  tcp_local_3_stream_iperf3.json  tcp_local_4_stream_iperf3.json
performance/script/: iperf_plotter.py
performance/script/skmsg/general/: general_ram_graph_plotter.py  graph_plotter.py  mem_usage_general.sh
performance/script/skmsg/sk/: mem_sk_plotter.py
performance/script/throughput/: script_iperf3.sh
performance/skmsg_backpressure/sk/: mem_usage_cleaner.py  mem_usage_sk.sh  output.csv
performance/tcp_local/: tcp_local_1_stream.json  tcp_local_2_stream.json  tcp_local_3_stream.json  tcp_local_4_stream.json
performance/tcp_local_ebpf/: tcp_local_ebpf_1_stream.json  tcp_local_ebpf_1_stream_2.json  tcp_local_ebpf_2_stream.json  tcp_local_ebpf_3_stream.json  tcp_local_ebpf_4_stream.json
performance/throughput/local/tcp_local/: tcp_local_1_stream_iperf3.json
performance/throughput/local/tcp_local_skmsg/: tcp_local_1_stream_skmsg_iperf3.json  tcp_local_2_stream_skmsg_iperf3.json  tcp_local_3_stream_skmsg_iperf3.json  tcp_local_4_stream_skmsg_iperf3.json
performance/throughput/remote/RDMA/: client_iperf3_1s.json
performance/throughput/remote/TCP/: tcp_local_1_stream.json
performance/throughput/system/: server_iperf3_1s.json
proxy/: client  client.c  server  server.c
socket_boost/: .dockerignore  CMakeLists.txt  Makefile  socket-boost.Dockerfile  test.sh
socket_boost/docs/: BPF.md  logic.drawio  schema.drawio
socket_boost/include/: BpfMng.h  Config.hpp  IndexCycle.h  IndexPool.hpp  Logger.h  RdmaContext.h  RdmaMng.h  SockMap.hpp  SocketMng.h  ThreadPool.h  common.h  config.h  hashmap.h  log_utils.h  rdma_connection.h  rdma_manager.h  rdma_utils.h  scap.h  sk_utils.h
socket_boost/include_cpp/: BpfMng.h  RdmaContext.h  RdmaMng.h  SocketMng.h  common.h  config.h
socket_boost/src/: BpfMng.cpp  IndexCycle.cpp  Logger.cpp  RdmaContext.cpp  RdmaMng.cpp  SocketMng.cpp  ThreadPool.cpp  hashmap.c  log_utils.c  main.c  main.cpp  rdma_connection.c  rdma_manager.c  rdma_utils.c  scap.bpf.c  scap.c  sk_utils.c
socket_boost/src_cpp/: BpfMng.cpp  RdmaContext.cpp  RdmaMng.cpp  SocketMng.cpp  main.cpp  scap.bpf.c
socket_boost/tests/: Makefile  config.h  server.c
socket_boost/tests/eBPF/: Makefile
socket_boost/tests/eBPF/include/: common.h  sk_utils.h
socket_boost/tests/eBPF/src/: main.c  scap.bpf.c
socket_boost/tests/rdma/: Makefile  rdma_client.c  rdma_client.cpp  rdma_common.cpp  rdma_common.h  rdma_server.c  rdma_server.cpp
socket_boost/tests/socket/: Makefile  client.c  config.h  server.c
socket_boost/tests/socket/src/: client.cpp  server.cpp
src/: Makefile  common.h  main.c  scap.bpf.c  temp.c
test/: Makefile  client.c  config.h  server.c
tests/: script.sh
tests/eBPF/include/: config.h  sk_utils.h
tests/eBPF/src/: sk_utils.c
tests/rdma/: Makefile
tests/rdma/include/: Manager.h  RdmaTestConf.hpp  RdmaTransfer.h
tests/rdma/src/: Manager.cpp  RdmaTransfer.cpp  rdma_client.cpp  rdma_server.cpp
tests/socket/: Makefile
tests/socket/include/: testSockConf.h
tests/socket/src/: client.cpp  server.cpp
